# Build-bench

./: .env  .gitignore  README.md  client.py  client_patch.py  pyproject.toml  server.py  server_patch.py
config/: info.yaml
data/case_study/x86_succeed_pro/texmath/: log_failed.txt  manifest.json
prompts/: full_file_generation.txt  patch_generation.txt
result_text_res/: texmath_result.txt
tools/auto_repair/: check_build_res.py  get_repo_structure.py  upload_files.py
